Revision history for Perl extension RabbitFoot

1.01    Sun Mar 18 07:21:58 2010
        - fix bugs.
        - support channel.flow.

1.00    Fri Mar  5 11:30:00 2010
        - fix module name.

0.01    Sun Dec  6 20:54:03 2009
        - original version